<resources>
    <!-- login string values -->
    <string name="app_name">PUO</string>
    <string name="login_email_hint">E-mail</string>
    <string name="login_password_hint">Password</string>
    <string name="login_btn_text">Login</string>
    <string name="login_tv_talk_to_me">talk to me</string>
    <string name="login_tv_register">Register</string>
    <!--                          -->
    <!-- register string values -->
    <string name="register_name_hint">Name</string>
    <string name="register_surname_hint">Surname</string>
    <string name="register_username_hint">Username</string>
    <string name="register_reEnterPass_hint">Re-Enter Password</string>
    <string name="register_tv_text_register">Register</string>
    <string name="register_btn_submit">Submit</string>
    <!--                          -->
    <string name="txt_input_layout">Please fill in all fields</string>
    <string name="add_picture">Add Picture</string>
    <string name="cell_phone">Cell Phone</string>
    <string name="roles_hint">Role</string>
    <string name="location_hint">Location</string>
    <string name="menu_save">Save</string>
    <string name="collector">Collector</string>
    <string name="specialist">Specialist</string>
    <string name="admin">Administrator</string>
    <string name="spRole_hint">Role</string>
    <string name="spLocationHint">Location</string>
    <string name="home_menu_add_word">Add Word</string>
    <string name="home_menu_profile">Profile</string>
    <string name="tv_recent_words">Recent Words</string>
    <string name="sp_Status">Status</string>
    <string name="contact_role">Role</string>
    <string name="tv_word_mates">Word Mates</string>
    <string name="tvLoading">Logging in...please wait</string>
    <string name="title_activity_word_treasure">Word Treasure</string>
    <string name="tv_label_sort">Sort</string>
    <string name="tv_label_language">Language</string>
    <string name="tv_label_part_of_speech">Part of speech</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="enter_email">Enter your e-mail address</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="please_wait">Please Wait</string>
    <string name="logging_in">Logging...in</string>
    <string name="word_treasure">Word Treasure</string>
    <string name="word_game">Word Game</string>
    <string name="word_centre">Word Centre</string>
    <string name="word_2_word">Word2Word</string>
    <string name="word_mates">Word Mates</string>
    <string name="word_chest">Word Chest</string>
    <string name="word_highscore">High Scores</string>
    <string name="logout">Log Out</string>
    <string name="updating">Updating</string>
    <string name="supported">Supported</string>
    <string name="not_supported">Not Supported</string>
    <string name="add_word">Add a Word</string>
    <string name="prompt_language">Language</string>
    <string name="prompt_part_of_speech">Part of Speech</string>
    <string name="enter_word">Enter a word</string>
    <string name="definition">Enter a definition</string>
    <string name="sentence_example">Enter sentence with word</string>
    <string name="change_password">Change Password</string>

    <!-- sort_filter_bar spinner entries -->
    <string-array name="entries_ordering">
        <item>Date Desc</item>
        <item>Date Asc</item>
        <item>Word Desc</item>
        <item>Word Asc</item>
    </string-array>

    <string-array name="entries_part_of_speech">
        <item>Part of Speech</item>
        <item>Noun</item>
        <item>Pronoun</item>
        <item>Verb</item>
        <item>Adverb</item>
        <item>Adjective</item>
        <item>Preposition</item>
        <item>Conjunction</item>
        <item>Determiner</item>
    </string-array>

    <string-array name="entries_language">
        <item>Language</item>
        <item>English</item>
        <item>Afrikaans</item>
        <item>isiXhosa</item>
        <item>isiZulu</item>
        <item>isiNdebele</item>
        <item>Sepedi</item>
        <item>Sesotho</item>
        <item>Setswana</item>
        <item>SiSwati</item>
        <item>Tshivenda</item>
        <item>Xitsonga</item>
    </string-array>

    <string name="action_settings">Settings</string>
    <string name="popup_menu_support">Support</string>
    <string name="popup_menu_block">Block</string>
    <string name="popup_menu_rate">Rate</string>
    <string name="popup_menu_add_to_word_chest">Add to Word Chest</string>
    <string name="popup_menu_share">Share</string>
    <string name="add_image">Add Image</string>
    <string name="add_sound_clip">Record</string>
    <string name="edit">Edit</string>
    <string name="word_centers">Word Centers</string>
    <string name="game_no_score">0</string>
    <string name="popup_menu_unsupport">Unsupport</string>

    <array name="role_items">
        <item>Collector</item>
        <item>Specialist</item>
        <item>Administrator</item>
    </array>
    <array name="location_items">
        <item>Street Address</item>
        <item>City</item>
        <item>Province</item>
        <item>Code</item>
    </array>

    <!-- messaging strings -->
    <string name="loading_text">Loading...</string>
    <string name="text_chat_title">Text Chat</string>
    <string name="select_user_prompt">Select a user to chat with:</string>
    <string name="previous_symbol"><![CDATA[<<]]></string>
    <string name="next_symbol"><![CDATA[>>]]></string>
    <string name="nickname_prompt">What is your name?</string>
    <string name="start_chat_button_text">Start chat</string>
    <string name="chat_invitation_message">Do you want to chat with %s?</string>
    <string name="decline_button_text">Decline</string>
    <string name="accept_button_text">Accept</string>
    <string name="text_chat_with_smb_title">Text Chat with %s</string>
    <string name="chat_invitation_default">Do you want to chat?</string>
    <string name="list_row_arrow_description">list_row_arrow</string>
    <string name="waiting_for_template">Waiting for %s to accept invitation...</string>
    <string name="title_activity_word_chest">Word Chest</string>
    <string name="game_bonus_score">+ 1.0</string>
    <string name="game_points">Points</string>
    <string name="game_word_count">Words: 0/20</string>
    <string name="game_time_count">Time: 0:00</string>
    <string name="game_match_definition_title">Match Definition</string>
    <string name="game_match_defintion_description">Which Words Means?</string>
    <string name="game_parts_of_speech_title">Parts of Speech</string>
    <string name="game_parts_of_speech_desc">What Part of Speech is this word?</string>
    <string name="game_wat_language_desc">What Language is this word?</string>
    <string name="game_what_language_title">What Language?</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="tv_PlaySound">Play Clip</string>
    <!-- messaging strings -->

    <string name="update_list">Update List</string>
    <string name="take_pic">Take Picture</string>
    <string name="select_audio">Browse</string>
    <string name="tvUserType">Specialist</string>
    <string name="tvUsername">Jason Bourne</string>
    <string name="tvStatus">Online</string>
    <string name="menu_edit_word">Edit Word</string>
    <string name="load_words">Loading Words</string>
    <string name="high_scores">High Scores</string>

    <string-array name="highScoreSpinnerEntries">
        <item>What Language</item>
        <item>Match Defintion</item>
        <item>Part Of Speech</item>
    </string-array>

    <!-- AdMob ad unit IDs -->
    <string name="banner_home_footer">ca-app-pub-4259318414780369/9724814935</string>
    <string name="interstitial_full_screen">ca-app-pub-0664570763252260/1769900428</string>
    <string name="share_word_subject">New Word from PUO app</string>
    <string name="sms">via Sms</string>
    <string name="email">via Email</string>
    <string name="word_mate">to Word Mate</string>


</resources>
