<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home_menu_addWord"
        android:orderInCategory="101"
        android:title="@string/home_menu_add_word"
        app:showAsAction="always" />

    <item
        android:id="@+id/home_menu_profile"
        android:orderInCategory="102"
        android:title="@string/home_menu_profile"
        app:showAsAction="always" />

    <item
        android:id="@+id/word_treasure"
        android:orderInCategory="103"
        android:title="@string/word_treasure"
        app:showAsAction="never" />

    <item
        android:id="@+id/word_centers"
        android:orderInCategory="104"
        android:title="@string/word_centers"
        app:showAsAction="never" />

    <item
        android:id="@+id/word_chest"
        android:orderInCategory="104"
        android:title="@string/word_chest"
        app:showAsAction="never" />
    <item
        android:id="@+id/word_mates"
        android:orderInCategory="105"
        android:title="@string/word_mates"
        app:showAsAction="never" />

    <item
        android:id="@+id/word_2_word"
        android:orderInCategory="106"
        android:title="@string/word_2_word"
        app:showAsAction="never" />

    <item
        android:id="@+id/word_game"
        android:orderInCategory="107"
        android:title="@string/word_game"
        app:showAsAction="never" />

    <item
        android:id="@+id/word_highscore"
        android:orderInCategory="108"
        android:title="@string/word_highscore"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_logout"
        android:orderInCategory="109"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>