<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/support"
        android:orderInCategory="103"
        android:title="@string/popup_menu_support"
        app:showAsAction="never" />
    <item
        android:id="@+id/unsupport"
        android:orderInCategory="103"
        android:title="@string/popup_menu_unsupport"
        app:showAsAction="never" />
    <item
        android:id="@+id/block"
        android:orderInCategory="104"
        android:title="@string/popup_menu_block"
        app:showAsAction="never" />
    <item
        android:id="@+id/rate"
        android:orderInCategory="105"
        android:title="@string/popup_menu_rate"
        app:showAsAction="never" />
    <item
        android:id="@+id/add_to_word_chest"
        android:orderInCategory="106"
        android:title="@string/popup_menu_add_to_word_chest"
        app:showAsAction="never" />
    <item
        android:id="@+id/share"
        android:orderInCategory="107"
        android:title="@string/popup_menu_share"
        app:showAsAction="never" />
</menu>