<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/support"
        android:orderInCategory="104"
        android:icon="@drawable/ic_support_24dp"
        android:title="@string/popup_menu_support"
        app:showAsAction="always" />

    <item
        android:id="@+id/block"
        android:orderInCategory="103"
        android:icon="@drawable/ic_block_24dp"
        android:title="@string/popup_menu_block"
        app:showAsAction="always" />
    <item
        android:id="@+id/rate"
        android:orderInCategory="105"
        android:icon="@drawable/ic_rate_24dp"
        android:title="@string/popup_menu_rate"
        app:showAsAction="always" />
    <item
        android:id="@+id/add_to_word_chest"
        android:orderInCategory="106"
        android:icon="@drawable/ic_add_to_wordchest_24dp"
        android:title="@string/popup_menu_add_to_word_chest"
        app:showAsAction="always" />
    <item
        android:id="@+id/share"
        android:orderInCategory="107"
        android:icon="@drawable/ic_share_24dp"
        android:title="@string/popup_menu_share"
        app:showAsAction="always" />
</menu>