<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.v7.widget.Toolbar
        android:id="@+id/update_toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/AppTheme"
        app:popupTheme="@style/AppTheme"
        android:titleTextColor="@color/colorIcons"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp">
        <FrameLayout
            android:layout_width="80dp"
            android:layout_height="80dp">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/ivProfilePic"
                android:src="@drawable/logo_puo"/>
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:clickable="true"
                android:id="@+id/ivCircle"
                android:src="@drawable/circle"/>
        </FrameLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_picture"
                android:id="@+id/tvAddPic" />
        </LinearLayout>
    </LinearLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etName"
        android:layout_gravity="center_horizontal"
        android:hint="@string/register_name_hint" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/surname_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etSurname"
        android:layout_gravity="center_horizontal"
        android:hint="@string/register_surname_hint" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etUsername"
        android:layout_gravity="center_horizontal"
        android:hint="@string/register_username_hint" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/etEmail"
        android:layout_gravity="center_horizontal"
        android:hint="@string/login_email_hint" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/etPassword"
        android:layout_gravity="center_horizontal"
        android:hint="@string/login_password_hint" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/cell_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:id="@+id/etCellPhone"
        android:layout_gravity="center_horizontal"
        android:hint="@string/cell_phone" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.CollapsingToolbarLayout
        android:id="@+id/spRole_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spRoles"
        android:layout_gravity="center_horizontal"
        android:entries="@array/role_items"
        android:prompt="@string/roles_hint"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>
    </android.support.design.widget.CollapsingToolbarLayout>
    <android.support.design.widget.CollapsingToolbarLayout
        android:id="@+id/spLocation_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spLocation"
        android:layout_marginBottom="60dp"
        android:layout_gravity="center_horizontal"
        android:entries="@array/location_items"
        android:prompt="@string/location_hint" />
    </android.support.design.widget.CollapsingToolbarLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_tv_talk_to_me"/>

</LinearLayout>
    </ScrollView>