<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dp16"
    android:paddingRight="@dimen/dp16">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dp48"
        android:layout_marginBottom="@dimen/dp4"
        android:gravity="center"
        android:text="@string/text_chat_title"
        android:textSize="@dimen/text_large" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp48"
        android:layout_marginBottom="@dimen/dp4"
        android:layout_marginTop="@dimen/dp4"
        android:gravity="center_vertical"
        android:text="@string/select_user_prompt"
        android:textSize="@dimen/text_medium" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/usersList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_gravity="start"
            android:layout_marginBottom="@dimen/dp4"
            android:layout_marginTop="@dimen/dp4"
            android:textAlignment="viewStart" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dp48"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="@dimen/dp4"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/previousButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp4"
                android:layout_weight="1"
                android:text="@string/previous_symbol" />

            <Button
                android:id="@+id/nextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp4"
                android:layout_weight="1"
                android:text="@string/next_symbol" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>